CHANGES
=======

0.20.0 (XX-XX-XXXX)
-------------------

- Extend list of web exceptions, add HTTPMisdirectedRequest,
  HTTPUpgradeRequired, HTTPPreconditionRequired, HTTPTooManyRequests,
  HTTPRequestHeaderFieldsTooLarge, HTTPVariantAlsoNegotiates,
  HTTPNotExtended, HTTPNetworkAuthenticationRequired status codes #644

- Do not remove AUTHORIZATION header by WSGI handler #649

- Fix broken support for https proxies with authentication #617

- Get REMOTE_* and SEVER_* http vars from headers when listening on
  unix socket #654

- Add HTTP 308 support #663

- Add Tf format (time to serve request in seconds, %06f format) to
  access log #669